# cserver

./: .gitignore  CMakeLists.txt  array_t.h  client_t.c  client_t.h  conn_t.c  conn_t.h  list_t.c  list_t.h  main.c  nd_pool_t.h  node_t.h  protocol_t.c  protocol_t.h  queue_t.c  queue_t.h  server_t.c  server_t.h  sktop.c  sktop.h  task_t.c  task_t.h  thd_pool_t.c  thd_pool_t.h
assist/: CMakeLists.txt
assist/src/: main.c
clog/: CMakeLists.txt  clog.c  clog.h  readme.md  xlog.c  xlog.h
clog/inc/: xlog.h
clog/src/: clog.c  xlog.c
dsdef/: CMakeLists.txt  datadef.h  datatype_t.h  list_t.c  list_t.h  nd_pool_t.c  node_t.h  pool_t.c  pool_t.h  queue_t.c  queue_t.h
dsdef/inc/: datatype_t.h  list_t.h  nd_pool_t.h  pool_t.h
dsdef/src/: list_t.c  pool_t.c
protocol/: CMakeLists.txt
protocol/inc/: protocol_t.h
server/: CMakeLists.txt
server/inc/: client_t.h  msg_t.h
server/src/: client_t.c  server_t.c  sktop.c
